--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,3 @@
-
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
@@ -6,31 +5,32 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^8.1",
+        "php": ">=7.1.3",
         "dompdf/dompdf": "^2.0",
-        "fideloper/proxy": "^4.4",
+        "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^7.5",
-        "laravel/framework": "^10.0",
-        "laravel/tinker": "^2.8",
-        "laravelcollective/html": "^6.4",
+        "kylekatarnls/laravel-carbon-2": "^1.0.0",
+        "laravel/framework": "5.8.*",
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.8",
         "mercadopago/dx-php": "2.5.3",
-        "nesbot/carbon": "^2.66",
-        "pusher/pusher-php-server": "^7.2"
+        "nesbot/carbon": "2.0.0-beta.2 as 1.25.0",
+        "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.21",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "filp/whoops": "~2.0",
+        "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "~1.0",
+        "phpunit/phpunit": "~6.0",
+        "symfony/thanks": "^1.0"
     },
     "autoload": {
+        "classmap": [
+            "database/seeds",
+            "database/factories"
+        ],
         "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
@@ -38,35 +38,30 @@
             "Tests\\": "tests/"
         }
     },
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+            ]
+        }
+    },
     "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
-        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
+            "@php artisan key:generate"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
     "config": {
-        "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
+        "optimize-autoloader": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "symfony/thanks": true
         }
-    },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+    }
 }
