--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^10.0",
         "laravel/tinker": "^2.10",
+        "laravel/ui": "^4.6",
         "laravelcollective/html": "^6.4",
         "mercadopago/dx-php": "^3.0",
         "nesbot/carbon": "^2.68",
